# bdat

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  build_docs.sh  mypy.ini  prefect.yaml  requirements.txt  setup.cfg
.github/workflows/: documentation.yml  publish-to-pypi.yml
altair/: generate_json.sh
altair/src/: aging_data.py  aging_rates.py  cap.py  cap_ctrl.py  cap_hist.py  cap_timeline.py  celllife.py  eval_data.py  evalgroup.py  ocp.py  properties_scatter.py  pulse_impedance.py  pulse_scatter.py  qocv.py  res.py  res_ctrl.py  steps.py  test.py  testevals.py  testset.py
altair/template/: plot.html  plotgroup.html  testeval.html
examples/: 1482756.parquet  1844272_DigiBatt_Checkup.parquet  DigiBatt_CG50_1173_HPPC.parquet  bdf.ipynb  hppc.ipynb  ocv.ipynb  simple.ipynb
prefect/: Dockerfile  Dockerfile_local  deploy.py  flows.py  install.sh
sphinx/: cli.rst  conf.py  index.rst  kadi.rst  patterns.rst  prefect.rst  setup.rst  structure.rst
src/bdat/: __init__.py  bdat.py  server.py
src/bdat/database/: __init__.py
src/bdat/dataimport/: import_rules.py  normalize.py
src/bdat/entities/: __init__.py  data_processing.py  types.py
src/bdat/exceptions/: __init__.py
src/bdat/functions/: functions.py  import_fittingdata.py  import_tests.py
src/bdat/patterns/: eval_rules.py  find_patterns.py
src/bdat/plots/: __init__.py  plot_aging_data.py  plot_aging_rates.py  plot_cap.py  plot_celllife.py  plot_pulse_impedance.py  plot_res.py  plot_steps.py  plot_test.py  plot_testeval_details.py  (+2 more)
tests/dataimport/: test_normalize.py
(+97 files in other folders)
