[metadata]
name = bdat
version = file: src/bdat/version
author = Elias Barbers, ISEA, RWTH Aachen University
author_email = Elias.Barbers@isea.rwth-aachen.de
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.isea.rwth-aachen.de/Personal-Projects/ESS/eba/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas==2.2.2
    altair==5.1.2
    click==8.1.7
    parse==1.19.0
    numpy==2.0.0
    scipy==1.13.1
    pyarrow==16.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bdat = bdat.bdat:main

[options.package_data]
bdat = py.typed, version
